// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Price component as expected 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  MX$0.00
</Text>
`;

exports[`renders Price component as expected 2`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  MX$10.46
</Text>
`;

exports[`renders Price component as expected 3`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  MX$1,000,000.00
</Text>
`;
